[package]
name = "compiler"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chumsky = { version = "0.13", features = ["pratt"] }
ariadne = "0.6"
im = "15"
wasm-bindgen = "0.2.125"
console_error_panic_hook = "0.1.7"

[lib]
crate-type = ["cdylib", "rlib"]
